src/test/ui/unboxed-closures/unboxed-closure-sugar-used-on-struct-1.stderr
error[E0214]: parenthesized type parameters may only be used with a `Fn` trait
  --> $DIR/unboxed-closure-sugar-used-on-struct-1.rs:8:19
   |
LL |     let x: Box<Bar()> = panic!();
   |                   ^^ only `Fn` traits may use parentheses

error[E0107]: wrong number of type arguments: expected 1, found 0
  --> $DIR/unboxed-closure-sugar-used-on-struct-1.rs:8:16
   |
LL |     let x: Box<Bar()> = panic!();
   |                ^^^^^ expected 1 type argument

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0107, E0214.
For more information about an error, try `rustc --explain E0107`.
